[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bricoler"
version = "0.1.0"
description = 'utility for running FreeBSD src development workflows'
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
keywords = []
authors = [
  { name = "Mark Johnston", email = "markj@FreeBSD.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pexpect",
]

[project.optional-dependencies]
coverage = [
    "coverage~=7.0",
    "pytest-cov>=5.0.0"
]
test = [
    "pytest~=8.0.0",
    "pytest-timeout~=2.0.0"
]

[project.scripts]
bricoler = "bricoler.bricoler:main"

[project.urls]
Documentation = "https://github.com/markjdb/bricoler#readme"
Issues = "https://github.com/markjdb/bricoler/issues"
Source = "https://github.com/markjdb/bricoler"

[tool.hatch.build.targets.wheel.shared-data]
"share/bricoler.1" = "share/man/man1/bricoler.1"
"share/bricoler-completion.bash" = "share/bash-completion/completions/bricoler"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bricoler tests}"

[tool.coverage.run]
source_pkgs = ["bricoler", "tests"]
branch = true
parallel = true
source = ["src/"]

[tool.coverage.paths]
bricoler = ["*/src/bricoler", "*/bricoler/src/bricoler"]
tests = ["tests", "*/bricoler/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
timeout = 10

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    "build",
    "dist"
]
lint.select = [
    "ANN",
    "B",
    "D",
    "E",
    "F",
    "I",
    "PERF",
    "PLW",
    "PYI",
    "RUF",
    "S",
    "W"
]
lint.ignore = [
    "D107",  # Document __init__ nags.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S"
]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list =
    coverage
    py310
    py311
    py312
    py313
    py314

[testenv]
extras =
    test
commands =
    {envpython} -m pytest {posargs:-v tests}

[testenv:coverage]
extras =
    coverage
    test
commands =
    {envpython} -m pytest --cov=bricoler --cov-report=term --cov-report=html \
        {posargs:-vv tests}

[testenv:type]
deps =
    mypy
commands =
    {envpython} -m mypy {posargs:src}
"""
